# Fern

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  ConstructorTests.fn  README.md  core.fn  corestub.fn  fuzz.fn  linux_setup.sh  main.cpp  minimal.fn  scratch.fn  test.fn  test2.fn
.github/workflows/: ci.yml  release.yml
advent/: day1.fn
cli/: main.cpp
cmake/: BuildLibffi.cmake  FetchFastFloat.cmake  FetchLLVM.cmake
common/: arena.hpp  logger.cpp  logger.hpp  table_builder.hpp
fern-vscode/: README.md  language-configuration.json  package-lock.json  package.json
fern-vscode/src/: commentEdits.ts  extension.ts  lspClient.ts  sectionFolding.ts
fern-vscode/syntaxes/: fern.tmLanguage.json
ferncli/: CMakeLists.txt  README.md  main.cpp  test_runner.cpp  test_runner.hpp
fernfuzz/: CMakeLists.txt  README.md  fern.dict  main.cpp
fernlib/: CMakeLists.txt  README.md  fern.hpp
fernlib/ast/: README.md  arena.hpp  ast.hpp  builder.hpp  formatdbg.hpp  hittest.hpp  validate.hpp
fernlib/common/: cast.hpp  compilation.cpp  compilation.hpp  compiler.hpp  diagnostic.hpp  diagnostic_codes.def
fernlib/declaration/: builder.hpp  table.cpp  table.hpp
fernlib/flir/: README.md  builder.hpp  context.cpp  context.hpp  flir.hpp  fmt.cpp  fmt.hpp  lower.cpp  lower.hpp
fernlib/lexer/: lexer.cpp  lexer.hpp
fernlib/parser/: errors.hpp  parser.cpp  parser.hpp
fernlib/semantic/: README.md  builtin_aliases.cpp  builtin_aliases.hpp  context.cpp  context.hpp
fernlib/semantic/binder/: README.md  binder.cpp  binder.hpp  binder_attributes.cpp  binder_calls.cpp  binder_declare.cpp  binder_define.cpp  binder_exprs.cpp  binder_initializers.cpp  binder_literals.cpp  binder_methods.cpp  binder_pipeline.cpp  binder_pipeline.hpp  binder_scope.cpp  binder_stmts.cpp  binder_symbols.cpp  binder_types.cpp  binder_validate.cpp  binding.hpp  block_binder.cpp  block_binder.hpp  fhir_builder.hpp  formatast.hpp  method_binder.cpp  method_binder.hpp  namespace_binder.cpp  namespace_binder.hpp  root_binder.cpp  root_binder.hpp  scope.hpp  type_binder.cpp  type_binder.hpp
fernlib/semantic/binder/core/: binder.cpp  binder_calls.cpp  binder_exprs.cpp  binder_stmts.cpp
fernlib/semantic/binder/scopes/: block_binder.cpp  block_binder.hpp  method_binder.cpp  method_binder.hpp  namespace_binder.hpp  root_binder.hpp  type_binder.hpp
fernlib/semantic/fhir/: README.md  fhir.hpp  fhir_constant.cpp  flow.cpp  flow.hpp  fmt.cpp  fmt.hpp  fold.cpp  fold.hpp  hittest.cpp  hittest.hpp  lower.cpp  lower.hpp
fernlib/semantic/symbol/: README.md  fmt.cpp  fmt.hpp  overload.cpp  overload.hpp  symbol.cpp  symbol.hpp  symbol_fmt.cpp  symbol_lookup.cpp  table.cpp  table.hpp
fernlib/source/: file.cpp  file.hpp  span.cpp  span.hpp  walker.cpp  walker.hpp
fernlib/token/: kind.hpp  token.hpp  walker.cpp  walker.hpp
fernlsp/: CMakeLists.txt  README.md  analysis.cpp  analysis.hpp  diagnostics.cpp  diagnostics.hpp  display.cpp  display.hpp  document.cpp  document.hpp  hover.cpp  hover.hpp  main.cpp  server.cpp  server.hpp
lib/: clay.fn  clay_wrapper.cpp
lsp/: main.cpp
plugin/: build.bat  package-lock.json  package.json
plugin/src/: extension.ts
plugin/syntaxes/: fern.tmLanguage.json
runtime/: file.fn  memory.fn  print.fn  runtime.cpp  string.fn  stringtools.fn
spec/: 01-introduction.md  02-syntax-basics.md  03-variables-and-data.md  04-operators-and-expressions.md  05-control-flow.md  06-functions.md  07-arrays.md  08-custom-types.md  09-properties.md  10-enums.md  11-namespaces.md  12-generic-programming.md  13-extern.md  14-pointers.md
src/: compile_result.hpp  compiled_module.hpp  compiler.cpp  compiler.hpp  jit.cpp  jit.hpp  test_runner.cpp  test_runner.hpp
src/ast/: ast.hpp  ast_code_printer.hpp  ast_printer.hpp
src/backend/: backend.cpp  backend.hpp
src/binding/: bound_tree.hpp  bound_tree_builder.cpp  bound_tree_builder.hpp  bound_tree_printer.hpp  conversion_inserter.cpp  conversion_inserter.hpp  conversions.hpp
src/codegen/: codegen_function.cpp  codegen_function.hpp  codegen_module.cpp  codegen_module.hpp  flir_codegen.cpp  flir_codegen.hpp  fnir_codegen.cpp  fnir_codegen.hpp  hlir_codegen.cpp  hlir_codegen.hpp  llvm_ir_builder.cpp  llvm_ir_builder.hpp
src/common/: error.cpp  error.hpp  file_utils.cpp  file_utils.hpp  logger.cpp  logger.hpp  source_database.hpp  source_location.hpp  token.hpp  token_kind.hpp
src/flir/: bound_to_flir.cpp  bound_to_flir.hpp  flir.cpp  flir.hpp  flir_builder.hpp  ir_type.cpp  ir_type.hpp
src/fnir/: bound_to_fnir.cpp  bound_to_fnir.hpp  fnir.hpp  fnir_builder.hpp  ir_type.cpp  ir_type.hpp
src/hlir/: bound_to_hlir.cpp  bound_to_hlir.hpp  hlir.hpp  hlir_builder.hpp
src/llvm/: codegen_context.cpp  codegen_context.hpp  jit.cpp  jit.hpp  llvm_backend.cpp  llvm_backend.hpp  llvm_backend.inl  llvm_codegen.cpp  llvm_codegen.hpp
src/parser/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token_stream.cpp  token_stream.hpp
src/semantic/: semantic_validator.cpp  semantic_validator.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  symbol_table_builder.cpp  symbol_table_builder.hpp  symbol_table_validator.cpp  symbol_table_validator.hpp  syntax_validator.cpp  syntax_validator.hpp  type.cpp  type.hpp  type_resolver.cpp  type_resolver.hpp  type_system.cpp  type_system.hpp  type_topology.cpp  type_topology.hpp
src/vm/: vm_backend.cpp  vm_backend.hpp
test-app/: Vector3.fn  main.fn
tests/: README.md  Test44.fn
tests/arithmetic/: ArithAdd.fn  ArithAddVar.fn  ArithCompoundAdd.fn  ArithDiv.fn  ArithMixedOps.fn  ArithMul.fn  ArithSub.fn
tests/arrays/: ArrayAccess.fn  ArrayElementAdd.fn  ArrayElementAssign.fn  ArrayForIn.fn  ArrayForInIndex.fn  ArrayOfTypes.fn  ArrayOfTypesValue.fn  ArraySumFunc.fn
tests/broken/: arrays.fn  arrays2.fn  broken1.fn  casting1.fn  casting2.fn  casting3.fn  casting4.fn  literal-suffixes.fn  poisoning.fn  validation.fn
tests/bugs/: assign-parenthetical-array-type.fn  call-non-function.fn  dangling-binary-op.fn  field-inside-function.fn  fn-nested-namespace.fn  generic-invalid-instantiation.fn  (+18 more)
(+375 files in other folders)
